a bit of styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Noto+Serif"
+      rel="stylesheet"
+    />
+    <title>Title</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Title</title>
-</head>
-
-<body>
-  <div id="root" class="container">
-  </div>
-</body>
-
+  <body>
+    <div id="root" class="container"></div>
+  </body>
 </html>
