--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Noto+Serif"
-      rel="stylesheet"
-    />
-    <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
+    <title>Saba Jafarzadeh</title>
   </head>
 
   <body>
