--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Author: Saba Jafarzadeh, Project: Find Professional">
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
   <title>Saba Jafarzadeh</title>
 </head>
